[project]
name = "revu"
version = "0.1.0"
description = "RevU — Enhanced Python Code Reviewer"
requires-python = ">=3.11"

# -----------------------------
# Ruff (lint + format + imports)
# Docs: https://docs.astral.sh/ruff/
# -----------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "W",   # pycodestyle warnings
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "SIM", # flake8-simplify
  "PL",  # Pylint-inspired rules
  "RUF", # Ruff-specific rules
  "N",   # pep8-naming
  "RET", # flake8-return
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "T10", # flake8-debugger
  "PGH"  # pygrep-hooks
]
ignore = [
  "E203", "W503",  # Black compatibility (safe to keep)
  "D203", "D212"   # Docstring style conflicts (if using pydocstyle)
]

[tool.ruff.format]
# Enable Ruff's formatter (replaces Black)
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.isort]
# Ruff’s import sorter (replaces isort)
combine-as-imports = true
known-first-party = ["revu"]

# -----------------------------
# mypy (typing)
# -----------------------------
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_column_numbers = true
ignore_missing_imports = true

# -----------------------------
# pydocstyle (docstrings)
# -----------------------------
[tool.pydocstyle]
convention = "google"
add-ignore = ["D105", "D107"]

# -----------------------------
# Bandit (security)
# -----------------------------
[tool.bandit]
exclude_dirs = [".venv", "venv", "build", "dist", "tests", "__pycache__"]
